# data-engineering

./: .gitignore
airflow/: Dockerfile  README-airflow.md  README-package.md  docker-compose.yaml  install_library.sh  pyproject.toml  readme.md  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: minio_file_sensor_dag.py
airflow/temp/: firstDAG.py  minio_file_sensor_dag.py
fluent-bit/interval-curl/: docker-compose.yml  fluent-bit.yaml  http-poller.sh
fluent-bit/interval-curl/scripts/: set_parameters.lua
kafka/: .gitignore  docker-compose.yml
kafka/connects/: docker-compose.fixed.yml  docker-compose.multi-connect.yml  docker-compose.yml
kafka/connects/config/: connect-file-sink.properties  connect-file-source.properties  connect-standalone.properties  local-file-source.json
